# FrontendModule

./: .gitignore  Cargo.toml  Embed.toml  Readme.md  build_cli_for_pi.sh  justfile
.cargo/: config.toml
.github/workflows/: ci_checks.yml  cli.yml  firmware.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
firmware/: Cargo.toml  memory.x
firmware/src/: atten.rs  bsp.rs  foo.rs  log_det.rs  main.rs  mnc.rs
hardware/: FreeCAD_Render.FCStd  FreeCAD_Render.FCStd1  GreX Frontend.csv  GreX Frontend.kicad_pcb  GreX Frontend.kicad_pro  GreX Frontend.kicad_sch  GreX Frontend.xlsx  GreX Frontend.xml  IF Filter.kicad_sch  Project Library.kicad_sym  adl5611.kicad_sch  ch1_mix.kicad_sch  ch2_mix.kicad_sch  image_filter.kicad_sch  input.kicad_sch  lo_filter.kicad_sch  mcu.kicad_pro  mcu.kicad_sch  mix_in.kicad_sch  mix_out.kicad_sch  output.kicad_sch  power.kicad_sch  power_sense.kicad_sch  rf_combined.kicad_sch  rf_in.kicad_sch  sym-lib-table
hardware/Gerbers/: GreX Frontend-F_Cu.gtl  GreX Frontend-NPTH.drl  GreX Frontend-PTH.drl  GreX Frontend-job.gbrjob
hardware/Library.pretty/: AT224.kicad_mod  QFN-16_EP_2x3_Pitch0.5mm.kicad_mod  USON-8-1EP_3x2mm_P0.5mm_EP0.2x1.6mm.kicad_mod
hardware/bom/: ibom.html
transport/: Cargo.toml
transport/src/: lib.rs
