[package]
edition = "2021"
name = "firmware"
version = "0.2.0"

[dependencies]
cortex-m = { version = "0.7" }
cortex-m-rt = "0.7"
defmt = { version = "0.3" }
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
rp2040-hal = { version = "0.9", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.2"
postcard = { version = "1", features = ["defmt"] }
transport = { path = "../transport", features = ["use-defmt"] }
heapless = "0.7"
ina3221 = { git = "https://github.com/kiranshila/INA3221", version = "0.1.0" }
micromath = "2"
fugit = { version = "0.3", features = ["defmt"] }
